fix: toList는 리스트 변경 불가하여 변경